[package]
name = "zelfm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core framework
zel_core = "0.1.1"
vorbis_rs = "0.5.5"
iroh = "0.95.1"
bytes = "1.11"
symphonia = { version = "0.5.5", features = ["all"] }

# Async runtime
tokio = { version = "1.48", features = ["full", "sync"] }
futures = "0.3"
async-trait = "0.1"

# Audio I/O (optional features)
rodio = { version = "0.21", optional = true }
cpal = { version = "0.15", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
anyhow = "1.0"
log = "0.4"

[features]
default = ["playback", "live-input"]
playback = ["rodio"]
live-input = ["cpal"]
